+++++++++++
Python News
+++++++++++

What's New in Python 3.1.4?
===========================

*Release date: XXXX-XX-XX*

Core and Builtins
-----------------

Library
-------


What's New in Python 3.1.3?
===========================

*Release date: 2010-11-27*

Core and Builtins
-----------------

- Issue #10391: Don't dereference invalid memory in error messages in the ast
  module.

Library
-------

- Issue #10323: itertools.islice() now consumes the minimum number of
  inputs before stopping.  Formerly, the final state of the underlying
  iterator was undefined.

- Issue #10565: The collections.Iterator ABC now checks for both
  __iter__ and __next__.

- Issue #10561: In pdb, clear the breakpoints by the breakpoint number.

- Issue #10459: Update CJK character names to Unicode 5.1.

- Issue #10092: Properly reset locale in calendar.Locale*Calendar classes.

- Issue #6098: Don't claim DOM level 3 conformance in minidom.

- Issue #5762: Fix AttributeError raised by ``xml.dom.minidom`` when an empty
  XML namespace attribute is encountered.

- Issue #1710703: Write structures for an empty ZIP archive when a ZipFile is
  created in modes 'a' or 'w' and then closed without adding any files. Raise
  BadZipfile (rather than IOError) when opening small non-ZIP files.

- Issue #4493: urllib.request adds '/' in front of path components which does not
  start with '/. Common behavior exhibited by browsers and other clients.

- Issue #6378: idle.bat now runs with the appropriate Python version rather than
  the system default. Patch by Sridhar Ratnakumar.

- Issue #10407: Fix two NameErrors in distutils.

- Issue #10198: fix duplicate header written to wave files when writeframes()
  is called without data.

- Issue #10467: Fix BytesIO.readinto() after seeking into a position after the
  end of the file.

- Issue #1682942: configparser supports alternative option/value delimiters.

Build
-----

- Backport r83399 to allow test_distutils to pass on installed versions.
